--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="contained">arya</div>
+    </div>
     
 </body>
 </html>
