--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./asset/css/style.css">
 </head>
+
 <body>
-    <div class="container">
-        <div class="contained">arya</div>
-    </div>
-    
+    <header>
+
+    </header>
+    <main>
+        <div class="container">
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+
+
+
+
+
+
+
+
+
+        </div>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
