--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
 
     </header>
-    <main>
+    
         <div class="container">
             <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
             <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
@@ -24,23 +24,14 @@
             <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
             <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
             <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-
-
-
-
-
-
-
-
-
         </div>
 
-    </main>
+    
 
     <footer>
-
+        <div class="footer">
+            arya
+        </div>
     </footer>
 
 </body>
