--- a/index.html
+++ b/index.html
@@ -6,32 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
 
     </header>
-    
-        <div class="container">
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-            <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+
+    <div class="container">
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+    </div>
+
+
+
+    <footer class="footer">
+
+        <div>
+            <i class="fa-solid fa-microphone"></i>
+            <i class="fa-solid fa-video"></i>
+
+        </div>
+        <div>
+            <i class="fa-solid fa-user-plus"></i>
+            <i class="fa-solid fa-users"></i>
+            <i class="fa-solid fa-chart-simple"></i>
+            <i class="fa-solid fa-desktop"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-record-vinyl"></i>
+            <i class="fa-solid fa-square-plus"></i>
+            <i class="fa-solid fa-ellipsis"></i>
+
+        </div>
+        <div class="end-meeting">
+            End meeting
+
         </div>
 
-    
-
-    <footer>
-        <div class="footer">
-            arya
-        </div>
     </footer>
 
 </body>
