--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <div>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+        <div class="speaker">
+            Speaker view
+
+        </div>
 
     </header>
 
