--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 
 <body>
     <header class="header">
-        <div>
-            <i class="fa-solid fa-xmark"></i>
-        </div>
-        <div class="speaker">
-            Speaker view
-
-        </div>
+        <div class="button-container"> 
+            <button><i class="fa-solid fa-table-cells"></i> Speaker view</button>
+             <button><i class="fa-solid fa-maximize"></i></button>
+         </div>
+     
 
     </header>
+    
 
     <div class="container">
         <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
