--- a/index.html
+++ b/index.html
@@ -23,16 +23,65 @@
     
 
     <div class="container">
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
-        <div class="contained"><img src="./asset/css/img/419-200x300.jpg" alt=""></div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+        <div class="contained">
+            <img src="./asset/css/img/419-200x300.jpg" alt="">
+            <p> <i class="fa-solid fa-microphone-lines-slash"></i> Pinco Pallo</p>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
     </div>
 
 
